<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageViewLogoUtfpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/imageViewAppLogoContentDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_utfpr" />

    <TextView
        android:id="@+id/textViewAppDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textViewAppDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName" />

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoUtfpr" />

    <TextView
        android:id="@+id/textViewAppAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppAuthorName"
        app:layout_constraintStart_toStartOf="@+id/imageViewLogoUtfpr"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppDescription" />

    <TextView
        android:id="@+id/textViewAppAuthorEmailContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppAuthorEmailContent"
        app:layout_constraintStart_toEndOf="@+id/textViewAppAuthorEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppAuthorNameContent" />

    <TextView
        android:id="@+id/textViewAppAuthorNameContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppAuthorNameContent"
        app:layout_constraintStart_toEndOf="@+id/textViewAppAuthorName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppDescription" />

    <TextView
        android:id="@+id/textViewAppAuthorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppAuthorEmail"
        app:layout_constraintStart_toStartOf="@+id/textViewAppAuthorName"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppAuthorName" />

    <TextView
        android:id="@+id/textViewAppCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textViewAppCourse"
        app:layout_constraintStart_toStartOf="@+id/textViewAppDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppAuthorEmail" />

    <TextView
        android:id="@+id/textViewAppCourseContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textViewAppCourseContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAppCourse"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppAuthorEmailContent" />
</androidx.constraintlayout.widget.ConstraintLayout>