<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EventActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/textViewEventTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextEventTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/editTextEventTitle"
            app:layout_constraintStart_toStartOf="@+id/textViewEventTitle"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventTitle" />

        <TextView
            android:id="@+id/textViewEventContractorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textViewEventContractorName"
            app:layout_constraintStart_toStartOf="@+id/editTextEventTitle"
            app:layout_constraintTop_toBottomOf="@+id/editTextEventTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>